fix photo cropping in viewer

--- a/src/components/BookViewer.module.css
+++ b/src/components/BookViewer.module.css
@@ -113,8 +113,7 @@
 
 .photo {
   width: 100%;
-  max-height: 55%;
-  object-fit: cover;
+  height: auto;
   display: block;
 }
 
